<resources>
    <string name="app_name">Dịch vụ chuyển đổi đầu số Auto</string>
    <string name="tieude_mucluc">Chọn một số muốn chuyển đổi</string>
    <string name="title_dialog">Bạn có đồng ý chuyển đổi đầu số trong danh bạ?</string>
    <string name="txt_yes">Đồng ý</string>
    <string name="txt_no">Thoát</string>
    <string name="contactnumberOld">Old01234</string>
    <string name="contactnumberNew">New01234</string>
    <string name="dialogalltitle">Bạn có muốn chuyển toàn bộ danh sách này k?</string>
</resources>
